--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport"content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>cqgator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Maven Pro', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-image: url('chuck.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
+
+        h1 {
+			font-family: 'Raleway', sans-serif;
+            font-size: 5rem;
+            text-align: center;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        iframe {
+            width: 80%;
+            max-width: 800px;
+            height: 450px; /* Adjust for your video's aspect ratio */
+            border: none;
+        }
+
+		.social-icons {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .social-icons a {
+            margin: 0 15px;
+        }
+
+        .social-icons img { /* Set all icons to the same size */
+            width: 40px;
+            height: 40px;
+            filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+        }
+    </style>
+</head>
+<body>
+    <h1>cqgator</h1>
+
+	<div class="social-icons">
+        <a href="https://www.instagram.com/cqgator" target="_blank">
+            <img src="ig.png" alt="Instagram">
+        </a>
+        <a href="https://twitter.com/cqgator" target="_blank">
+            <img src="twit.png" alt="Twitter">
+        </a>
+        <a href="https://www.tiktok.com/@cqgator" target="_blank">
+            <img src="tiktok.png" alt="TikTok">
+        </a>
+        <a href="https://www.youtube.com/cqgator" target="_blank">
+            <img src="youtube.png" alt="YouTube">
+        </a>
+        <a href="mailto:cqgator@gmail.com">
+            <img src="email.png" alt="Email">
+        </a>
+        <a href="https://soundcloud.com/cqgator" target="_blank">
+            <img src="sc.png" alt="SoundCloud">
+        </a>
+    </div>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3AdgMybIndk" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe> 
+</body>
+</html>
