--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="https://www.tiktok.com/@cqgator" target="_blank">
             <img src="tiktok.png" alt="TikTok">
         </a>
-        <a href="https://www.youtube.com/cqgator" target="_blank">
+        <a href="https://www.youtube.com/@cqgator" target="_blank">
             <img src="youtube.png" alt="YouTube">
         </a>
         <a href="mailto:cqgator@gmail.com">
