adjusted icons, added spotify, added intro text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport"content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>cqgator</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -27,6 +28,15 @@
             text-align: center;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+		/* New styles for the intro text */
+        .intro {
+            font-family: 'Open Sans', sans-serif; /* Different font */
+            font-size: 1.2rem; /* Slightly smaller */
+            font-weight: 300; /* Lighter weight */
+            text-align: center;
+            margin-bottom: 15px;
         }
 
         iframe {
@@ -56,7 +66,12 @@
 <body>
     <h1>cqgator</h1>
 
+	<p class="intro">hi, i'm charlie</p>
+
 	<div class="social-icons">
+		<a href="https://open.spotify.com/artist/6ckUpUiOHgUxNTyPZtIqvd" target="_blank">
+            <img src="spot.png" alt="Spotify">
+        </a>
         <a href="https://www.instagram.com/cqgator" target="_blank">
             <img src="ig.png" alt="Instagram">
         </a>
