fixing spacing, adding info lines

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             background-size: cover;
             background-position: center;
             color: white;
+			padding-bottom: 40px;
         }
 
         h1 {
 			font-family: 'Raleway', sans-serif;
             font-size: 5rem;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
@@ -37,6 +38,14 @@
             font-weight: 300; /* Lighter weight */
             text-align: center;
             margin-bottom: 15px;
+        }
+
+		/* Additional style for the new sentence */
+        .description {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 1rem; /* Slightly smaller than the intro text */
+            text-align: center;
+			margin-top: -10px;
         }
 
         iframe {
@@ -66,7 +75,10 @@
 <body>
     <h1>cqgator</h1>
 
-	<p class="intro">hi, i'm charlie</p>
+	<p class="intro">hi, i'm charlie.</p>
+	<p class="description">i'm making music. most of it is on soundcloud right now and will be on spotify soon.</p> 
+    <p class="description">my new video is below. enjoy &#x263A;</p> 
+
 
 	<div class="social-icons">
 		<a href="https://open.spotify.com/artist/6ckUpUiOHgUxNTyPZtIqvd" target="_blank">
