https redirect fixes and minor tweaks including file readability

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="redirect.js"></script>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-	<meta name="viewport"content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>cqgator</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
     <style>
         body {
             margin: 0;
@@ -20,42 +22,40 @@
             background-size: cover;
             background-position: center;
             color: white;
-			padding-bottom: 40px;
+            padding-bottom: 40px;
         }
 
         h1 {
-			font-family: 'Raleway', sans-serif;
+            font-family: 'Raleway', sans-serif;
             font-size: 5rem;
             text-align: center;
             margin-bottom: 10px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
-		/* New styles for the intro text */
         .intro {
-            font-family: 'Open Sans', sans-serif; /* Different font */
-            font-size: 1.2rem; /* Slightly smaller */
-            font-weight: 300; /* Lighter weight */
+            font-family: 'Open Sans', sans-serif;
+            font-size: 1.2rem;
+            font-weight: 300;
             text-align: center;
             margin-bottom: 15px;
         }
 
-		/* Additional style for the new sentence */
         .description {
             font-family: 'Open Sans', sans-serif;
-            font-size: 1rem; /* Slightly smaller than the intro text */
+            font-size: 1rem;
             text-align: center;
-			margin-top: -10px;
+            margin-top: -10px;
         }
 
         iframe {
             width: 80%;
             max-width: 800px;
-            height: 450px; /* Adjust for your video's aspect ratio */
+            height: 450px;
             border: none;
         }
 
-		.social-icons {
+        .social-icons {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
@@ -65,7 +65,7 @@
             margin: 0 15px;
         }
 
-        .social-icons img { /* Set all icons to the same size */
+        .social-icons img {
             width: 40px;
             height: 40px;
             filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
@@ -75,32 +75,31 @@
 <body>
     <h1>cqgator</h1>
 
-	<p class="intro">hi, i'm charlie.</p>
-	<p class="description">i'm making music. most of it is on soundcloud right now and will be on spotify soon.</p> 
+    <p class="intro">hi, i'm charlie.</p>
+    <p class="description">i'm making music. most of it is on soundcloud right now and will be on spotify soon.</p> 
     <p class="description">my new video is below. enjoy &#x263A;</p> 
 
-
-	<div class="social-icons">
-		<a href="https://open.spotify.com/artist/6ckUpUiOHgUxNTyPZtIqvd" target="_blank">
-            <img src="spot.png" alt="Spotify">
+    <div class="social-icons">
+        <a href="https://open.spotify.com/artist/6ckUpUiOHgUxNTyPZtIqvd" target="_blank">
+            <img src="images/spot.png" alt="Spotify">
         </a>
         <a href="https://www.instagram.com/cqgator" target="_blank">
-            <img src="ig.png" alt="Instagram">
+            <img src="images/ig.png" alt="Instagram">
         </a>
         <a href="https://twitter.com/cqgator" target="_blank">
-            <img src="twit.png" alt="Twitter">
+            <img src="images/twit.png" alt="Twitter">
         </a>
         <a href="https://www.tiktok.com/@cqgator" target="_blank">
-            <img src="tiktok.png" alt="TikTok">
+            <img src="images/tiktok.png" alt="TikTok">
         </a>
         <a href="https://www.youtube.com/@cqgator" target="_blank">
-            <img src="youtube.png" alt="YouTube">
+            <img src="images/youtube.png" alt="YouTube">
         </a>
         <a href="mailto:cqgator@gmail.com">
-            <img src="email.png" alt="Email">
+            <img src="images/email.png" alt="Email">
         </a>
         <a href="https://soundcloud.com/cqgator" target="_blank">
-            <img src="sc.png" alt="SoundCloud">
+            <img src="images/sc.png" alt="SoundCloud">
         </a>
     </div>
 
