--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         }
 
         .spotify-container {
-            display: flex; /* Use flexbox for horizontal arrangement */
-            justify-content: center; /* Center horizontally */
+            display: flex; /* Use flexbox for vertical arrangement */
+            flex-direction: column; /* Stack items vertically */
+            justify-content: center; /* Center vertically */
             width: 80%; /* Matches iframe width */
             max-width: 800px;
             margin-bottom: 20px;
@@ -67,16 +68,17 @@
 
         .spotify-embed {
             height: 352px;
-            flex: 1; /* Allow each iframe to take equal width */
-            margin: 0 5px; /* Add small margin between iframes */
+            width: 100%; /* Make iframes take full width */
+            margin-bottom: 10px; /* Add space between iframes */
         }
 
-        /* Responsive adjustments for social icons */
         .social-icons {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
             flex-wrap: wrap;
+            /*Increase Social Icon Size*/
+            transform: scale(1.3); /*Increase size by 30%*/
         }
 
         .social-icons a {
@@ -101,23 +103,35 @@
         }
 
         .text-container {
-            background-color: rgba(0, 0, 0, 0.3); 
-            padding: 10px; 
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    border-radius: 8px;
+    margin-bottom: 15px; 
+    text-align: center;
+    width: 80%; /* Match width of Spotify embeds */
+    max-width: 800px;
+}
+
+.show-image {
+    width: 70%; /* Reduced width */
+    max-width: 400px; /* Reduced max-width */
+    margin: 0 auto 15px auto;
+    display: block;
+}
+
+/* Media Query to keep proportions on larger screens*/
+@media (min-width: 768px) {
+    .text-container {
+        width: 80%; /* maintain proportions with spotify embeds */
+    }
+}
 
         .text-section {
-            margin-bottom: 15px; /* Add spacing between sections */
+            font-size: 1.4rem;
+            line-height: 1.4;
         }
 
-        .show-image {
-            width: 85%; /* Adjust width as needed */
-            max-width: 450px; /* Optional: Set a maximum width for larger screens*/
-            margin: 0 auto 15px auto; /* Center the image horizontally */
-            display: block; /* Makes the image behave like a block element */
-        }
-    </style>
+            </style>
 </head>
 <body>
     <h1>cqgator</h1>
@@ -128,15 +142,15 @@
             <p class="description">i'm playing a show this Friday Feb 7 !! in NYC !!</p>
             <p class="description">it's FREE !! RSVP by clicking the flyer !!</p>
         </div>
+    </div>
 
-        <a href="https://posh.vip/e/ladder-talk-first-album-release-show" target="_blank">
-            <img class="show-image" src="images/feb7show.jpg" alt="Feb 7th Show">
-        </a>
+    <a href="https://posh.vip/e/ladder-talk-first-album-release-show" target="_blank">
+        <img class="show-image" src="images/feb7show.jpg" alt="Feb 7th Show">
+    </a>
 
-
+    <div class="text-container">
         <div class="text-section">
             <p class="description">music on my spotify & soundcloud (links below)</p>
-            <br>
             <p class="description">enjoy ☺</p>
         </div>
     </div>
@@ -166,8 +180,8 @@
     </div>
 
     <div class="spotify-container">
-        <iframe class="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/track/0sz6obMx7QCMaZsDPWSQTl?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/track/2qoOg5dS5bzpu2sxng0dLh?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/track/0sz6obMx7QCMaZsDPWSQTl?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3AdgMybIndk" 
