updated picture to be better

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 }
 
 .show-image {
-    width: 70%; /* Reduced width */
-    max-width: 400px; /* Reduced max-width */
+    width: 80%; /* Reduced width */
+    max-width: 500px; /* Reduced max-width */
     margin: 0 auto 15px auto;
     display: block;
 }
@@ -145,7 +145,7 @@
     </div>
 
     <a href="https://posh.vip/e/ladder-talk-first-album-release-show" target="_blank">
-        <img class="show-image" src="images/feb7show.jpg" alt="Feb 7th Show">
+        <img class="show-image" src="images/feb7show_V2.png" alt="Feb 7th Show">
     </a>
 
     <div class="text-container">
