--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
             line-height: 1.4;
         }
 
+        .soundcloud-container {
+            width: 100%; /* Make SoundCloud embed full width */
+            max-width: 800px; /* Keep a maximum width for responsiveness */
+            margin: 20px auto;
+        }
+
+        .soundcloud-embed {
+            width: 100%; /* Ensure SoundCloud iframe takes full width */
+            height: 250px;
+            margin-bottom: 10px;
+        }
             </style>
 </head>
 <body>
@@ -181,6 +192,11 @@
 
     <div class="spotify-container">
         <iframe class="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/track/2qoOg5dS5bzpu2sxng0dLh?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+        <div class="soundcloud-container">
+            <iframe class="soundcloud-embed"  scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1830235650&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+
         <iframe class="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/track/0sz6obMx7QCMaZsDPWSQTl?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
