fixed jpg file name from wrong case (lame)

--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
     <div class="image-pair-container">
         <img class="paired-image" src="images/IMG_5175.PNG" alt="Promotional Image 1">
         <!-- Replace 'images/your-second-image.jpg' with the actual path -->
-        <img class="paired-image" src="images/pb.jpg" alt="Promotional Image 2">
+        <img class="paired-image" src="images/pb.JPG" alt="Promotional Image 2">
     </div>
 
     <!-- Second pair of images - ADDED THIS BLOCK -->
     <div class="image-pair-container">
         <!-- Replace 'images/your-third-image.jpg' with the actual path -->
-        <img class="paired-image" src="images/chuck.jpg" alt="Promotional Image 3">
+        <img class="paired-image" src="images/chuck.JPG" alt="Promotional Image 3">
         <!-- Replace 'images/your-fourth-image.jpg' with the actual path -->
-        <img class="paired-image" src="images/bike.jpg" alt="Promotional Image 4">
+        <img class="paired-image" src="images/bike.JPG" alt="Promotional Image 4">
     </div>
 
 
